# localmod

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: API.md  AWESOME_LIST_SUBMISSIONS.md  DEPLOYMENT.md  QUICKSTART.md
evaluation/: __init__.py  benchmark_results.json  chi2025_benchmark.py  chi2025_benchmark_results.json  quick_benchmark.py  run_benchmarks.py
examples/: basic_usage.py  demo.py  discord_bot.py
scripts/: download_models.py
src/localmod/: __init__.py  cli.py  config.py  pipeline.py  schemas.py
src/localmod/api/: __init__.py  app.py  routes.py
src/localmod/classifiers/: __init__.py  nsfw.py  nsfw_image.py  pii.py  prompt_injection.py  spam.py  toxicity.py
src/localmod/models/: __init__.py  base.py  paths.py
tests/: __init__.py  conftest.py  test_api.py  test_base.py  test_integration.py  test_pipeline.py
tests/test_classifiers/: __init__.py  test_nsfw.py  test_pii.py  test_prompt_injection.py  test_spam.py  test_toxicity.py
